# activitydesk

./: .gitignore  .lvimrc  Cargo.toml  Makefile  README.markdown  TODO.markdown  bindings.json  build.rs  rustfmt.toml
.flatpak/: af.black.ActivityDesk.json
src/: CMakeLists.txt  main.cpp  main.rs  qml.qrc
src/activitydesk/: account.rs  http.rs  mod.rs  profile.rs  publisher.rs  server.rs  settings.rs  stream.rs
src/activitydesk/account/: mod.rs  resolver.rs
src/activitydesk/qml/: main.qml  scratch.qml
src/activitydesk/qml/accounts/: new.qml
src/activitydesk/qml/components/: account_chooser.qml  composer.qml  post.qml  stream.qml
src/activitydesk/qt/: core.rs  mod.rs
src/activitydesk/qt/components/: composer.rs
src/activitydesk/qt/models/: identity.rs  mod.rs  stream.rs  timeline.rs
src/activitydesk/qt/views/: main.rs  mod.rs  new_account_dialog.rs
src/implementation/: accounts.rs
src/indieweb/: indieauth.rs  link_rel.rs  micropub.rs  microsub.rs  mod.rs
src/indieweb/indieauth/: account.rs  mod.rs
src/mastodon/: account.rs  http.rs  mod.rs  publisher.rs  stream.rs
src/qml/: login.qml  main.qml
src/qml/accounts/new/: indieauth.qml  mastodon.qml
src/qtimpl/: accounts.rs  mod.rs  session.rs
