[package]
name = "activitydesk"
publish = false
version = "0.0.1"
authors = ["Jacky Alciné <yo@jacky.wtf>"]
edition = "2018"
description = "A desktop client for social networking."
license = "AGPL-3.0-or-later"
repository = "https://anongit.kde.org/scratch/jalcine/activitydesk"

[dependencies]
cstr = "*"
libc = "*"
qmetaobject = "*"
soup = "*"
reqwest = "*"
log = "*"
env_logger = "*"
url = "*"
elefren = "0.20.0"
lazy_static = "*"
