[package]
name = "activitydesk"
publish = false
version = "0.0.1"
authors = ["Jacky Alciné <yo@jacky.wtf>"]
edition = "2018"
description = "A desktop client for social networking."
license = "AGPL-3.0-or-later"
repository = "https://anongit.kde.org/scratch/jalcine/activitydesk"
build = "src/build.rs"

[package.metadata.pkg-config]
Qt5Core = "5.0"
Qt5Widgets = "5.0"
Qt5Qml = "5.0"
Qt5Quick = "5.0"

[dependencies]
cstr = "*"
libc = "*"
qmetaobject = "*"
soup = "*"
reqwest = "*"
url = "*"
elefren = "*"

[build-dependencies]
metadeps = "*"
